# web-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  Taskfile.yaml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml  svelte.yml
.sqlx/: query-01526138d0cd787dd0121a8a0ced390d439346378ab4d3590328aad7f6fae62a.json  query-02a01c9fe26ee4b777e80832296f609a386bc6d0d53bc0c3399809b440738d40.json  query-02b3b16c78aef2146ee53f08bcbb0d27538f0b19aef8ce4c69f7087fe28ac04b.json  query-0383ba7e28a90d841a87947d322cea607423fbfed4d6dad0739eeafe5729ef14.json  query-049100faeab4657cf64f3dcd25537991642e8f103e96a969fb5988bad5572c27.json  query-05d49b961d5dfb46828c18d6a6df8f46c7d61c38add6c75d7708f2bd7e93be78.json  query-05dbbd810e571d1653e73d5001b1fc262cd779d1439ca255421fa51118744048.json  query-07eba14e32d72782dde094c1597bde9607276fd32ad7392be4e77eacbdfabd69.json  query-0a7f7dada2b22198bf33693dd7d13ef08374307bbe5cd6152cffdb2dd19bc83b.json  query-0a9e1116c90a9b1e1b1cfaec3a2b0de6452826ed8460bc7e49edb16b71a3dd77.json  query-0e2fbcf5a2d66a4ee1b5fd28dc178db72e2189d3fd4464ed7adbb54ed0ef0d5c.json  query-0eacf9023acb6c57e277d55f059a4895f384307769c989764dbf3f6d8d729d61.json  query-10714d781c4f88bb58ac8ac3393631dbfe9484d8ab62f69e25babbf449daa17d.json  query-10dbffac5ce5420e6581934bb042f7b94827f8edc63a5f3bd737e5b4c9d68f90.json  query-154c0b1e89ad82e920973a00897ed0374bc15ccf8eec3df2a02b657bcef3a6b2.json  query-168a88281c94d8ee96ab833c4ea149d9493a98c4a23bf81e36042790c7137fcd.json  query-172c20fbd5dc86fb2320ccb218652409751f86f3783c19b1e944618ee8b0b0e5.json  query-1747e8f8e20d3bb6d1d6c733cfd87b33c1dbb935f0add45a9f1b81932b579535.json  query-19151ec4a77c3cd1e182f0cfb6ccb83911c0075d35280252566d378120bc4c0e.json  query-19fc91b1024527bce698cc654c619dfdceca6f5938542bea66b025a89cd5dcd2.json  query-1d1f3ae0e85890c5e17cd58cc01aab3fe5c0b98dc2f82a8fc63cf984c209debe.json  query-21643eac78fdc89735010102e25e48311a4bb482726b2425efbd7fac55271f34.json  query-21c0768f87efd70066db55b20a68a28e3b5f31ab8e697035628e0a1cc5e8578b.json  query-21f0c5b465e9c05bcdcf76ebcbb2c3bf9b43bd2a8422f340ba346945f41d9d93.json  query-223754f6765b88eb4fdb3af656f46945c974fd10a8a0948b47217f29c862ac17.json  query-259e95906feebd70745a9b4787d72f504b9f674cb0d54bd28f1d7e51a8e5d309.json  query-25fab2cf9710a5c5922ff95f1ce25dc38e7b9fb9b7b2b69d1764dbd3dcc376fd.json  query-263f18e6e501202789d94afa7a31baacaf4fb201941634a73e8b8ae1db819216.json  query-26f6acf048a86178ceb4bfff6e7229dd503b9870fc635c24292b265c02a8ac1d.json  query-2773c175638db7d0023837276503a6e2a44b0c3ddaceaed65fb2e030d9ff3318.json  query-28aa0165bc75fbe6d2dac2b3b4e10877a6d3d279408e9dd6c008d7f67a6def8b.json  query-29e707635ce688d1e26f9e73cc57338483557621742f5caedb9f6cd2814dbc39.json  query-2b7447bd752e20be52df23f1a9434d59c9fb84040db305fc148ac40e94aba7fd.json  query-2cec0820b86b3f7ab80348fa91365aa33fc3700a7bacd8cc588a8eb6bd2cfb37.json  query-2e2fb62bdcb4bfab9cacb871281a71ed7fcbcbcae25d779ccac8128f667b4a94.json  query-2ef06099cc9b588665498b6f73004836b27058b73fe7617ad436edd698a52dea.json  query-30aa8003262b82ee58f1819f1a74c195768dce6d4c8d297e8b7eab1d990f61c5.json  query-31329106b5e77ff191cdb52bbd811af71244672925f91cc8f83e21d14f979ece.json  query-32bd2bb5781954c16789f5e68c442e02186b6fee3dc13c9fe1d1753b654aff2c.json  query-3394e166a6098c3246cb0e3a105875318c37277dfc2c4cbc31c09f669a6ab969.json  (+127 more)
backend/: .gitignore  Cargo.toml  Dockerfile  config_sites.toml
backend/src/: main.rs
backend/src/api/: admin_handlers.rs  admin_routes.rs  auth_handlers.rs  extractor.rs  handlers.rs  mod.rs  routes.rs  series_handlers.rs  user_handlers.rs
backend/src/api/admin/: admin_comment_handler.rs  admin_routes.rs  admin_series_handlers.rs  admin_user_handler.rs  mod.rs
backend/src/api/public/: auth_handlers.rs  comments_handlers.rs  mod.rs  public_routes.rs  series_handlers.rs
backend/src/app/: config.rs  coordinator.rs  management.rs  mod.rs  orchestrator.rs  setup.rs
backend/src/auth/: admin_handlers.rs  admin_router.rs  admin_routes.rs  handlers.rs  mod.rs  routes.rs
backend/src/builder/: config.rs  config_sites_watcher.rs  mod.rs  startup.rs
backend/src/common/: dynamic_proxy.rs  email_service.rs  error.rs  extension.rs  hashing.rs  jwt.rs  mod.rs  utils.rs
backend/src/core/: dynamic_proxy.rs  mod.rs  utils.rs
backend/src/database/: auth.rs  chapters.rs  comments.rs  db.rs  mod.rs  series.rs  series_user_actions.rs  storage.rs  users.rs
backend/src/db/: db.rs  storage.rs
backend/src/encoding/: image_encoding.rs  mod.rs
backend/src/processing/: coordinator.rs  image_encoding.rs  image_processing.rs  mod.rs  orchestrator.rs
backend/src/scraping/: coordinator.rs  fetcher.rs  mod.rs  model.rs  parser.rs
backend/src/task_worker/: delete_worker.rs  mod.rs
backend/src/task_workers/: channels.rs  delete_password_reset_token_worker.rs  delete_series_worker.rs  log_view_cleanup_worker.rs  mod.rs  repair_chapter_worker.rs  series_check_worker.rs
backend/src/user/: handlers.rs  mod.rs  routers.rs
frontend/: .prettierrc  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/: AddSeries.svelte  AdminMangaTable.svelte  AdminSeriesTable.svelte  AdminSidebar.svelte  AdminUserTable.svelte  BrowseSeries.svelte  ChapterViewPage.svelte  ConfirmationAlert.svelte  EditSeries.svelte  Footer.svelte  ForgotPassword.svelte  Header.svelte  LoginForm.svelte  ModalDialog.svelte  Pagination.svelte  RegisterAccount.svelte  RepairChapterSeries.svelte  ResetPassword.svelte  SearchSeries.svelte  SeriesCarousel.svelte  SeriesCategoryTag.svelte  SeriesView.svelte  SeriesViewPage.svelte  UserBookmarkPage.svelte  UserSettings.svelte  login-form.svelte  reset-password.svelte  sign-up.svelte
frontend/src/lib/store/: auth.ts  searchStore.svelte.ts  theme.ts
frontend/src/lib/utils/: markdown.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Header.svelte  MangaList.svelte
frontend/src/routes/admin-dashboard/: +layout.svelte  (+1 more)
migrations/: 20250701162631_manga_app.sql
nginx/: Dockerfile
src/: main.rs
(+34 files in other folders)
