[workspace]
members = [
    "backend"
]
resolver = "3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.deploy]
inherits = "release"
debug = false
opt-level = 3
strip = "none"
overflow-checks = false
debug-assertions = false
rpath = false
lto = "thin"
panic = "unwind"
codegen-units = 1
incremental = false