[package]
name = "backend"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "AGPL-3"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
image = "0.25.6"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
ravif = { version = "0.12.0", features = ["default"] }
regex = "1.11.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "~1.47.0", features = ["full"] }
tokio-retry2 = { version = "0.5.7", features = ["jitter"] }
toml = "0.9.0"
url = "2.5.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "erased-json", "cookie", "multipart"] }
axum-core = "0.5.2"
serde_json = "1.0.140"
time = "0.3.41"
rgb = "0.8.50"
aws-sdk-s3 = "1.93.0"
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
bytes = "1.10.1"
slug = "0.1.6"
backon = "1.5.1"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors"] }
argon2 = "0.5.3"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls",
    "macros", "runtime-tokio", "migrate"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
lettre = { version = "0.11.17", default-features = false, features = [
    "tokio1-rustls",
    "builder",
    "smtp-transport",
    "pool",
    "rustls-native-certs",
    "ring"
] }
async-channel = "2.5.0"