[package]
name = "backend"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "AGPL-3"
rust-version = "1.89.0"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
image = "0.25.8"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
ravif = { version = "0.12.0", features = ["default"] }
regex = "1.12.2"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.4"
axum-extra = { version = "0.12.1", features = ["typed-header", "erased-json", "cookie", "multipart"] }
axum-core = "0.5.5"
serde_json = "1.0.145"
time = "0.3.41"
rgb = "0.8.52"
aws-sdk-s3 = "1.112.0"
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
bytes = "1.11.0"
slug = "0.1.6"
backon = { version = "1.6.0", features = ["default", "tokio"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors", "tower", "compression-full", "async-compression", "timeout"] }
argon2 = "0.5.3"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls",
    "macros", "runtime-tokio", "migrate"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
lettre = { version = "0.11.18", default-features = false, features = [
    "tokio1-rustls",
    "builder",
    "smtp-transport",
    "pool",
    "rustls-platform-verifier",
    "ring"
] }
async-channel = "2.5.0"
tower = { version = "0.5.2", features = ["limit"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
arc-swap = "1.7.1"
pulldown-cmark = "0.13.0"
ammonia = "4.1.1"
once_cell = "1.21.3"
futures = "0.3.31"
